# chat_bot

./: .gitignore  README.md  chat_bot.py  host_config.json  mcp_host.py  pyproject.toml  servers.config.json
logs/: mcp-log.jsonl
mcp_servers/emoji-use-mcp/: model.py  pyproject.toml  resources.py  server.py
mcp_servers/filesystem/: filesystem_server.py
mcp_servers/github/: git_server.py
other/: packet_capture.pcapng
src/: chat_bot.py  mcp_host.py
